# arcagi

./: Cargo.toml  README.md  arcagi.md  show.py
src/: cats.rs  cell.rs  data.rs  examples.rs  experiments.rs  grid.rs  lib.rs  main.rs  rules.rs  runner.rs  shape.rs
