[package]
name = "arc-agi"
version = "0.1.6"
edition = "2024"
authors = ["Chris Dipple <chris@intelligent-net.co.uk>"]
license = "MIT OR Apache-2.0"
description = "ARC-AGI submission"
homepage = "https://github.com/intelligentnet/arcagi"
repository = "https://github.com/intelligentnet/arcagi"
documentation = "https://docs.rs/arc_agi"
keywords = ["arc-agi", "agi", "learning", "symbolic"]
#categories = ["computer-vision"]

[dependencies]
serde = "^1.0.124"
serde_json = "^1.0"
serde_derive = "^1"
#stemplate = "^0.1"
num-traits = "^0.2.19"
array_tool = "^1.0.3"
pathfinding = "^4.14.0"
itertools  = "^0.14"
crc = "^3.2.1"
peak_alloc = "^0.2.1"
strum = "^0.26.3"
strum_macros = "^0.26.4"
#regex = "^1.10"
#peg = "^0.8"

## Use the code below for the binary C wrapper code
#[lib]
#name = "arc_agi"
#crate-type = ["cdylib"]      # Creates dynamic lib OR
##crate-type = ["staticlib"] # Creates static lib
